# QR_CI_AI

./: CMakeLists.txt  conanfile.py
.github/workflows/: ci.yml
src/: identique_ratio.cpp
